--- a/notebooks/sgm_visualization.ipynb
+++ b/notebooks/sgm_visualization.ipynb
@@ -56,7 +56,7 @@
     "    \n",
     "    # Clone repo if needed\n",
     "    if not Path('/content/align_prompts').exists():\n",
-    "        !git clone https://github.com/YOUR_USERNAME/align_prompts.git /content/align_prompts\n",
+    "        !git clone https://github.com/ChuloIva/align_prompts /content/align_prompts\n",
     "    \n",
     "    sys.path.insert(0, '/content/align_prompts')\n",
     "    \n",
